# mangifera-demo

./: .gitignore  README.md  requirements.txt
api/: models.py  pyproject.toml  run.py
client/: pyproject.toml
shared/: model.py
